--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -3,8 +3,12 @@
 $off-black: #20222b;
 $off-white:#a5afd7;
 $dark-blue : #333745;
+$blue:#3c4251;
+$light-blue:#464b5e;
+$purple :#8357c5;
 
 //spacing
 $m-size: 1.6rem;
 $L-size: 3.2rem;
 $XL-size: 4.8rem;
+$s-size: 1.2rem;
