--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -2,3 +2,7 @@
 @import './base/base';
 @import './components/header';
 @import './components/container';
+@import './components/button';
+@import './components/widget';
+@import './components/options';
+@import './components/add-option';
