--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -7,7 +7,7 @@
 .add-option {
     display: flex;
     padding: $m-size;
-
+    flex-direction: column;
 
 }
 .add-option__input{
@@ -16,6 +16,15 @@
     color: $off-white;
     background: $dark-blue;
     border-bottom: 0.3rem solid darken($dark-blue, 10%);
-    margin-right: $s-size;
+   margin: 0 0 $s-size 0;
+    //margin-right: $s-size;
 
+}
+@media (min-width: $desktop-breakpoint) {
+  .add-option {
+    flex-direction: row;
+  }
+  .add-option__input {
+    margin : 0 $s-size 0 0;
+  }
 }
