--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,7 @@
     font-weight: bold;
     font-size: $L-size;
     width: 100%;
-    margin-bottom: $XL-size;
+    margin-bottom: $m-size;
     padding: 2.4rem;
 }
 
@@ -29,4 +29,9 @@
     border: none;
     color: $off-white;
     padding: 0;
+}
+@media (min-width: $desktop-breakpoint) {
+    .big-button {
+        margin-bottom: $XL-size;
+    }
 }
