--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -2,7 +2,7 @@
 .header {
     background: $off-black;
     color: white;
-    margin-bottom: $XL-size;
+    margin-bottom: $m-size;
     padding: $m-size 0;
 }
 
@@ -16,4 +16,7 @@
     font-size:$m-size;
     font-weight: 500;
     margin: 0;
+}
+@media(min-width: $desktop-breakpoint){
+   .header{ margin-bottom: $XL-size;}
 }
